feat(backend): aPIs design and backend implementation
finish APIs design and basic backend implementation for those APIs

BREAKING CHANGE: APIs implementation

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp-backend-starter",
+  "name": "funny-movies-exam",
   "version": "0.0.1",
   "description": "",
   "author": "",
