--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,8 @@
     "class-transformer": "^0.5.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "joi": "^17.5.0",
+    "joi": "^17.6.0",
+    "joi-password": "^3.0.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
