--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "automapper-ts": "^1.9.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.6.0",
@@ -63,6 +64,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/joi": "^17.2.3",
