refactor(fe+be): authen
refact singin + signup functionality on both FE & BE

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,8 @@ MODE=DEV
 VERBOSE=true
 SHOW_HEALTH_LOGS=true
 
+CLIENT_URL=http://localhost:8080
+
 RUN_MIGRATIONS=true
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
