feat(fe+be): reaction functionality
finish the reaction functionality on both FE & BE

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ VERBOSE=true
 SHOW_HEALTH_LOGS=true
 
 CLIENT_URL=http://localhost:8080
+AUTH_TOKEN_KEY=funnymovies-token
 
 RUN_MIGRATIONS=true
 POSTGRES_HOST=127.0.0.1
