--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,30 +1,46 @@
 version: '3'
 
 services:
-  vite-test-backend:
-    container_name: vite-test-backend
+  funnymovies-backend:
+    container_name: funnymovies-backend
     build:
       context: .
       target: development
-    image: vite-test-backend
-    command: npm run start:dev:no-docker
+    image: funnymovies-backend
+    restart: on-failure
+    command: npm run start -- --watch
     ports:
-      - "3000:80"
+      - "${PORT}:${PORT}"
     env_file:
-      - .env
+      - ./.env
     environment:
       - MODE=DEV
-      - PORT=80
-      - POSTGRES_HOST=postgres_nest
+      - CLIENT_URL=http://localhost:8080
+      - POSTGRES_HOST=funnymovies-db
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
-    # healthcheck:
-    #   test: [ "curl", "-f", "http://127.0.0.1/api/v1.0/health" ]
-    #   timeout: 20s
-    #   retries: 10
+    depends_on:
+      - funnymovies-db
+    tty: true
+    stdin_open: true
+
+  funnymovies-db:
+    image: postgres:9.6
+    container_name: funnymovies-db
+    restart: always
+    env_file:
+      - .env # to get the following env vars: POSTGRES_USER POSTGRES_PASSWORD POSTGRES_DB
+    ports:
+      - "${POSTGRES_PORT-5432}:5432"
+    volumes:
+      - db:/var/lib/postgresql/data
+    #   - ./data/postgres:/data/postgres (?)
 
 networks:
   default:
-    external:
-      name: nginx-proxy-net
+    # name: funnymovies-local-net
+    driver: bridge
+
+volumes:
+  db:
