--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/vue": "^6.5.1",
     "@types/jest": "^27.4.0",
     "@types/lodash-es": "^4.17.6",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "@vitejs/plugin-legacy": "^1.7.1",
