--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,17 @@
+MODE=DEV
+
 PORT=3000
 API_VERSION=1.0
-MODE=DEV
 VERBOSE=true
 SHOW_HEALTH_LOGS=true
 
 CLIENT_URL=http://localhost:8080
 AUTH_TOKEN_KEY=funnymovies-token
+JWT_SECRET=Y0uKnowWh@tItIs
 
 RUN_MIGRATIONS=true
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=mysecretpassword
-POSTGRES_DB=my_database
-
-JWT_SECRET=jwt_secret_key
+POSTGRES_PASSWORD=Y0uKnowWh@tItIs
+POSTGRES_DB=funnymovies_db
