--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,6 +1,8 @@
-MODE=PROD
+MODE=TEST
+NODE_ENV=test
 
-PORT=4000
+# diffent port for test
+PORT=3001
 API_VERSION=1.0
 VERBOSE=true
 SHOW_HEALTH_LOGS=true
@@ -11,7 +13,8 @@ JWT_SECRET=Y0uKnowWh@tItIs
 
 RUN_MIGRATIONS=true
 POSTGRES_HOST=127.0.0.1
-POSTGRES_PORT=5432
+# diffent port for test
+POSTGRES_PORT=5433
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Y0uKnowWh@tItIs
-POSTGRES_DB=funnymovies_db
+POSTGRES_DB=e2e_db
