--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     stdin_open: true
 
   funnymovies-db:
-    image: postgres:9.6
+    image: postgres
     container_name: funnymovies-db
     restart: always
     env_file:
@@ -34,7 +34,7 @@ services:
     ports:
       - "${POSTGRES_PORT-5432}:5432"
     volumes:
-      - db:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     #   - ./data/postgres:/data/postgres (?)
 
 networks:
@@ -43,4 +43,4 @@ networks:
     driver: bridge
 
 volumes:
-  db:
+  postgres-data:
