test(fe): add a simple unit test for frontend

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "vite --port 8080",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "test:vitest": "vitest watch",
-    "test:jest": "jest --watch",
+    "test:vitest": "vitest",
+    "test:jest": "jest",
     "lint:eslint": "eslint \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
     "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
