--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
   frontend:
     # needs: [detect_changes]
     # if: needs.detect_changes.outputs.frontend_has_been_changed == 'true'
-#     runs-on: ubuntu-latest
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
+    # runs-on: [self-hosted]
 
     steps:
     - uses: actions/checkout@v2
@@ -61,8 +61,8 @@ jobs:
   backend:
     # needs: [detect_changes]
     # if: needs.detect_changes.outputs.backend_has_been_changed == 'true'
-#     runs-on: ubuntu-latest
-    runs-on: [self-hosted]
+    runs-on: ubuntu-latest
+    # runs-on: [self-hosted]
 
     steps:
     - uses: actions/checkout@v2
