ci(testing): fix workflows yaml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
 #       run: npm run test:unit -- --coverage
       run: |
         cd backend
-        npm run test:unit
+        npm run test
       # env:
       #   CI: true
 
