ci(testing): fix workflows yaml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,7 @@ jobs:
 #       run: npm run test:unit -- --coverage
       run: |
         cd backend
+        cp .env.test .env
         npm run test
       # env:
       #   CI: true
