ci(deploy): docker-compose.dev.yml for deployment on dev env

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,11 +1,11 @@
 MODE=PROD
 
-PORT=4000
+PORT=80
 API_VERSION=1.0
 VERBOSE=true
 SHOW_HEALTH_LOGS=true
 
-CLIENT_URL=http://localhost:8080
+CLIENT_URL=http://funny-movies.loitra.xyz
 AUTH_TOKEN_KEY=funnymovies-token
 JWT_SECRET=Y0uKnowWh@tItIs
 
