ci(deploy): change domain name

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -5,7 +5,7 @@ API_VERSION=1.0
 VERBOSE=true
 SHOW_HEALTH_LOGS=true
 
-CLIENT_URL=http://funny-movies.loitra.xyz
+CLIENT_URL=http://funny-movies-dev.loitra.xyz
 AUTH_TOKEN_KEY=funnymovies-token
 JWT_SECRET=Y0uKnowWh@tItIs
 
