refactor(fe+be): moving files + adding setup file + setting database config + replace bcrypt package

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -10,7 +10,7 @@ AUTH_TOKEN_KEY=funnymovies-token
 JWT_SECRET=Y0uKnowWh@tItIs
 
 RUN_MIGRATIONS=true
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=funnymovies-db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Y0uKnowWh@tItIs
