--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,11 @@
     "db:seed": "npx --yes newman run --env-var validPwd=Y0uKnowWh@tItIs ./postman/FunnyMovies-Seed.postman_collection.json",
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "prestart": "npm run pretypeorm",
-    "start": "nest start",
-    "start:dev": "npm run db:start && npm run start -- --watch",
-    "start:dev:no-docker": "npm run start -- --watch",
+    "start": "npm run db:start && nest start",
+    "start:dev": "npm run start -- --watch",
     "start:debug": "npm run start -- --debug --watch",
     "start:prod": "node dist/main",
-    "cleanormconfig": "(rm ormconfig.json || :)",
-    "pretypeorm": "ts-node -r tsconfig-paths/register src/scripts/generate-ormconfig.ts",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/config.ts",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
     "typeorm:migration:revert": "npm run typeorm -- migration:revert",
@@ -29,8 +25,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "pretest:e2e": "NODE_ENV=test MODE=TEST ts-node -r tsconfig-paths/register -r dotenv/config src/scripts/generate-ormconfig.ts dotenv_config_path=./.env.test",
-    "test:e2e": "(docker-compose -f docker-compose.testing.yml up -d && jest --config ./test/jest-e2e.json --detectOpenHandles --runInBand) || true",
+    "pretest:e2e": "docker-compose -f docker-compose.testing.yml up -d",
+    "test:e2e": "(jest --config ./test/jest-e2e.json --detectOpenHandles --runInBand) || true",
     "posttest:e2e": "docker-compose -f docker-compose.testing.yml down -v"
   },
   "dependencies": {
@@ -45,7 +41,7 @@
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.2",
     "automapper-ts": "^1.9.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
@@ -67,7 +63,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
