build(be): database migration config

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "start:dev": "npm run start -- --watch",
     "start:debug": "npm run start -- --debug --watch",
     "start:prod": "node dist/main",
-    "typeorm": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/config.ts",
+    "typeorm": "ts-node --transpile-only -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/database.config.ts",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
     "typeorm:migration:revert": "npm run typeorm -- migration:revert",
