--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run",
     "typeorm:migration:revert": "npm run typeorm -- migration:revert",
+    "typeorm:seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js -n src/database/database.config.ts seed",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +31,7 @@
     "posttest:e2e": "docker-compose -f docker-compose.testing.yml down -v"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.1.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
@@ -56,7 +58,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.2.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@automapper/types": "^6.3.1",
